--- a/config/config.yml
+++ b/config/config.yml
@@ -1,4 +1,5 @@
-input_path: C:\\Users\\torao\\Pictures\\Pages\\Pages\\0410
+input_path: C:\\Users\\torao\\Pictures\\Pages\\Pages
+#input_path : C:\\Users\\torao\\Pictures\\Pages\\Pages_P
 output_path: ./data/output
 #reader:
 #  mode: word
