--- a/config/config.yml
+++ b/config/config.yml
@@ -1,11 +1,10 @@
-input_path: C:\\Users\\torao\\Pictures\\Pages\\Pages\\0410
+#input_path: C:\\Users\\torao\\Pictures\\Pages\\Pages\\0410
 #input_path : C:\\Users\\torao\\Pictures\\Pages\\Pages_P
-#input_path: ./data/input
+input_path: ./data/input
 output_path: ./data/output
 
 reader:
   mode: 'double-page'
-  page: double
   line_ksize: [12, 4]
   word_ksize: [4, 6]
   model:
