--- a/config/config.yml
+++ b/config/config.yml
@@ -1,13 +1,13 @@
-#input_path: C:\\Users\\torao\\Pictures\\Pages\\Pages\\0410
-input_path : C:\\Users\\torao\\Pictures\\Pages\\Pages_P
+input_path: C:\\Users\\torao\\Pictures\\Pages\\Pages\\0410
+#input_path : C:\\Users\\torao\\Pictures\\Pages\\Pages_P
 #input_path: ./data/input
 output_path: ./data/output
 
 reader:
-  mode: 'single-page'
+  mode: 'double-page'
   line_ksize: [12, 3]
   word_ksize: [4, 6]
   model:
     device: 'cpu'
     config: model/config/myconfig.yml
-    weights: model/config/myseq2seq.pth
+    weights: model/config/myseq2seq_1.pth
